--- a/Application/src/RazorPagesTestSample/Pages/Index.cshtml
+++ b/Application/src/RazorPagesTestSample/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Munson's Pickles and Preserves Team Messaging System";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>@ViewData["Title"] - My change at 12:15PM</h1>
 
 <div class="row">
     <div class="col-md-8">
